--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^2.1.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.43.9",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
