Create two typescript files for nav link component and fix type for children

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,4 +15,8 @@
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
+    "[typescript]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
