fix pull request, fix format

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,11 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/LoginForm"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/components/LoginForm"
+  ],
   "exclude": ["node_modules"]
 }
