--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-hook-form": "^7.43.9",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
-    "typescript": "5.0.4",
+    "typescript": "^5.1.3",
     "yup": "^1.1.1"
   },
   "devDependencies": {
