--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.43.9",
+    "react-icons": "^4.9.0",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
     "typescript": "^5.1.3",
