--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.9.0",
+    "react-loader-spinner": "^5.3.4",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
+    "swr": "^2.1.5",
     "typescript": "^5.1.3",
     "yup": "^1.1.1"
   },
