--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
+    "react-pdf": "^7.1.3",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
     "swr": "^2.1.5",
