--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-slick": "^0.23.10",
     "axios": "^1.4.0",
+    "crypto-js": "^4.1.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "next": "13.3.4",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/crypto-js": "^4.1.1",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.8"
