--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "crypto-js": "^4.1.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "formidable": "^3.5.1",
     "next": "13.3.4",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
@@ -44,6 +45,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/crypto-js": "^4.1.1",
+    "@types/formidable": "^3.4.2",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.8"
